--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SaveData",
+  "name": "savedata",
   "version": "1.0.0",
   "description": "Template Save your data",
   "main": "index.js",
