--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "kit": "parcel src/uikit.html --open",
+    "build:uikit": "rm -rf build/uikit && parcel src/uikit.html --out-dir build/uikit",
+    "build": "rm -rf build/uikit && parcel build src/index.html --out-dir build/www"
   },
   "repository": {
     "type": "git",
